# coffeeOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coffeeOS.cpp  coffeeOS.h  platformio.ini  preferences.cpp
coffeeOS/: variables.h
doc/: Doxyfile
py_sockets/: PacketSend.py
src/: binaries.h  cli_cmd.cpp  coffeeOS.cpp  coffeeOS.h  config.cpp  config.h  const.h  default.cpp  main.cpp  manager.cpp  manager.h  menu.cpp  menu.h  my_config.h  pref.cpp  product.cpp  product.h  saver.cpp  saver.h  stringhelper.h  transaction.h  user.cpp  user.h  wifi_handler.cpp  wifi_handler.h
unused/: binaries.h  cli.cpp  cli.h  saver.cpp  saver.h
